k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-cicd-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-cicd-demo
  template:
    metadata:
      labels:
        app: flask-cicd-demo
    spec:
      containers:
      - name: app
        image: REPLACE_IMAGE
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
