k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-cicd-demo
spec:
  selector:
    app: flask-cicd-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
